--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "rodar": "npm install -g nodemon && nodemon src/index.js"
+  },
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.11.0"
